--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -23,8 +23,8 @@
 
             student.initStudyAbroadTab('#studyabroadtab',
                 '@Url.Action("StudyAbroad", new { id = Model.Id })',
-                '#experiencelist',
-                '@Url.Action("Delete", "Experience")', 'experienceid');
+                '#studyabroadlist',
+                '@Url.Action("Delete", "StudyAbroad")', 'studyabroadid');
         });
     </script>
 }
