--- a/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
@@ -13,6 +13,6 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <a href="@Url.Action("Add", "Experience", new { studentId = ViewBag.StudentId })" class="btn btn-default" role="button">Add New Experience</a>
+        <a href="@Url.Action("Add", "StudyAbroad", new { studentId = ViewBag.StudentId })" class="btn btn-default" role="button">Add New Experience</a>
     </div>
 </div>
