--- a/src/Belletrix.Web/Views/StudyAbroad/Add.cshtml
+++ b/src/Belletrix.Web/Views/StudyAbroad/Add.cshtml
@@ -11,7 +11,7 @@
 @section FooterScript {
     <script>
         $(function () {
-            new Belletrix.Experience().initAdd();
+            new Belletrix.StudyAbroad().initAdd();
         });
     </script>
 }
