Use view models for study abroad actions

--- a/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
+++ b/src/Belletrix.Web/Views/Student/StudyAbroad.cshtml
@@ -1,6 +1,6 @@
-﻿@using Belletrix.Entity.Model;
+﻿@using Belletrix.Entity.ViewModel;
 
-@model IEnumerable<StudyAbroadModel>
+@model IEnumerable<StudyAbroadViewModel>
 
 @{ 
     Html.ViewData.Add(new KeyValuePair<string, object>("ShowStudent", false));
