--- a/src/Belletrix.Web/Views/StudyAbroad/Add.cshtml
+++ b/src/Belletrix.Web/Views/StudyAbroad/Add.cshtml
@@ -1,6 +1,6 @@
-﻿@using Belletrix.Entity.Model;
+﻿@using Belletrix.Entity.ViewModel;
 
-@model StudyAbroadModel
+@model AddStudyAbroadViewModel
 
 @{
     ViewBag.Title = "Add";
