--- a/src/Belletrix.Web/Views/StudyAbroad/List.cshtml
+++ b/src/Belletrix.Web/Views/StudyAbroad/List.cshtml
@@ -1,6 +1,6 @@
-﻿@using Belletrix.Entity.Model;
+﻿@using Belletrix.Entity.ViewModel;
 
-@model IEnumerable<StudyAbroadModel>
+@model IEnumerable<StudyAbroadViewModel>
 
 @{
     ViewBag.Title = "List";
