--- a/src/Belletrix.Web/Views/StudyAbroad/Edit.cshtml
+++ b/src/Belletrix.Web/Views/StudyAbroad/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@using Belletrix.Entity.ViewModel;
 
-@model AddStudyAbroadViewModel
+@model EditStudyAbroadViewModel
 
 @{
-    ViewBag.Title = "Add";
+    ViewBag.Title = "Edit";
+
     HtmlHelper.ClientValidationEnabled = true;
     HtmlHelper.UnobtrusiveJavaScriptEnabled = true;
 }
@@ -19,26 +20,27 @@
 @section Body {
     <div class="row">
         <div class="col-lg-12">
-            <h1>Create Experience for @ViewBag.Student.FirstName @ViewBag.Student.LastName</h1>
+            <h1>Edit Experience for @ViewBag.Student.FirstName @ViewBag.Student.LastName</h1>
             <ol class="breadcrumb">
                 <li><a href="@Url.Action("List", "Student")"><i class="glyphicon glyphicon-user"></i> Students</a></li>
                 <li><a href="@Url.Action("Edit", "Student", new { Id = ViewBag.Student.Id })"><i class="glyphicon glyphicon-user"></i> @ViewBag.Student.FirstName @ViewBag.Student.LastName</a></li>
-                <li class="active"><i class="glyphicon glyphicon-pencil"></i> Create Experience</li>
+                <li class="active"><i class="glyphicon glyphicon-pencil"></i> Edit Experience</li>
             </ol>
         </div>
     </div>
 
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { role = "form" }))
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true)
-        @Html.Hidden("StudentId", (int)ViewBag.Student.Id)
+        @Html.HiddenFor(x => x.Id)
+        @Html.HiddenFor(x => x.StudentId)
+        @Html.ValidationSummary()
 
         @Html.Partial("EditFields.Partial")
 
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <button type="submit" class="btn btn-default">Add Experience</button>
+            <div class="col-lg-12">
+                <button type="submit" class="btn btn-default">Save Changes</button>
                 <a href="@Url.Action("View", "Student", new { Id = ViewBag.Student.Id })" class="btn btn-link" role="button">Cancel</a>
             </div>
         </div>
