Replace server-side analytics with client-side

--- a/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
+++ b/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
@@ -29,3 +29,32 @@
             break;
     }
 }
+
+@helper RenderAnalyticsTag(string username = null)
+{
+    if (Request.IsLocal)
+    {
+        return;
+    }
+
+    <script type="text/javascript">
+        var _paq = _paq || [];
+        _paq.push(["setDomains", ["*.belletrix.org"]]);
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+
+        @if (!string.IsNullOrEmpty(username))
+        {
+            <text>_paq.push(['setCustomVariable', '1', 'username', '@username']);</text>
+        }
+
+        (function () {
+            var u="//analytics.andreinicholson.com/";
+            _paq.push(['setTrackerUrl', u+'piwik.php']);
+            _paq.push(['setSiteId', '17']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+        })();
+    </script>
+    <noscript><p><img src="//analytics.andreinicholson.com/piwik.php?idsite=17" style="border:0;" alt="" /></p></noscript>
+}
