--- a/src/Belletrix.Web/Views/Login/Index.cshtml
+++ b/src/Belletrix.Web/Views/Login/Index.cshtml
@@ -63,5 +63,7 @@
         $(Belletrix.Common.singleSubmit);
     </script>
     @MiniProfiler.RenderIncludes()
+    @GeneralLayout.RenderAnalyticsTag()
+
 </body>
 </html>
