--- a/src/Belletrix.Web/Views/Shared/_Layout.cshtml
+++ b/src/Belletrix.Web/Views/Shared/_Layout.cshtml
@@ -97,5 +97,7 @@
             });
         </script>
         @MiniProfiler.RenderIncludes()
+
+        @GeneralLayout.RenderAnalyticsTag(user.Login)
     </body>
 </html>
