--- a/src/Belletrix.Web/Views/Shared/_PromoLayout.cshtml
+++ b/src/Belletrix.Web/Views/Shared/_PromoLayout.cshtml
@@ -22,5 +22,6 @@
                 Belletrix.Common.initPinger('@Url.Action("Ping", "Home")');
             });
         </script>
+        @GeneralLayout.RenderAnalyticsTag()
     </body>
 </html>
