Fix duplicate activity log titles being entered into the system

--- a/src/Belletrix.Web/Views/ActivityLog/Add.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/Add.cshtml
@@ -24,6 +24,8 @@
 
         activityLog.initSession(
             '@Url.Action("StartSession", "ActivityLogPerson", new { guid = sessionId })');
+
+        activityLog.initTitleCheck('#Title', '#unique-name', '@Url.Action("TitleCheck")');
     });
     </script>
 }
