--- a/src/Belletrix.Web/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -28,6 +28,7 @@
                             @Html.ValidationMessageFor(x => x.Title3)
                         </div>
                     </div>
+                    <div class="col-lg-12" id="unique-name"></div>
                 </div>
             </div>
         </div>
