--- a/src/Belletrix.Web/Views/ActivityLog/View.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/View.cshtml
@@ -12,11 +12,22 @@
 @section Body {
     <div class="row">
         <div class="col-lg-12 page-header">
+            <div class="pull-left text-muted">
+                <span class="glyphicon glyphicon-time"></span>
+                Created
+                @Model.ActivityLog.Created.ToShortDateString()
+                @Model.ActivityLog.Created.ToShortTimeString()
+                by
+                @Model.CreatedBy.FirstName
+                @Model.CreatedBy.LastName
+            </div>
             <div class="btn-group pull-right">
                 <a href="@Url.Action("Edit", "ActivityLog", new { id = Model.ActivityLog.Id, guid = Guid.NewGuid() })"
                    class="btn btn-xs btn-info" data-placement="top"
                    title="Edit"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
             </div>
+
+            <br />
 
             <h2>@Model.ActivityLog.Title</h2>
 
@@ -44,17 +55,6 @@
     </div>
     <div class="row">
         <div class="col-lg-8">
-            <div class="row">
-                <div class="col-lg-12">
-                    <span class="glyphicon glyphicon-time"></span>
-                    Created
-                    @Model.ActivityLog.Created.ToShortDateString()
-                    @Model.ActivityLog.Created.ToShortTimeString()
-                    by
-                    @Model.CreatedBy.FirstName
-                    @Model.CreatedBy.LastName
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-unstyled list-inline">
@@ -90,68 +90,67 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>Organizers</h4>
+                    <h3>Organizers</h3>
                     @Model.ActivityLog.Organizers
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <h4>People</h4>
-                    
+                    <br />
                 </div>
             </div>
         </div>
         <div class="col-lg-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">Participants</div>
-                <div class="panel-body">
-                    @if (Model.Participants != null && Model.Participants.Any())
-                    {
-                        <ul class="list-group">
-                            @foreach (ActivityLogParticipantModel particpant in Model.Participants)
+        </div>
+    </div>
+    @if (Model.Participants != null && Model.Participants.Any())
+    {
+        <div class="row">
+            <div class="col-lg-12">
+                @foreach (var participants in Model.Participants.GroupBy(x => x.Type))
+                {
+                    <div class="panel panel-default">
+                        <div class="panel-heading">@participants.Key<text>s</text></div>
+                        <div class="panel-body">
+                            @foreach (ActivityLogParticipantModel participant in participants)
                             {
-                                <li class="list-group-item">
-                                    <span class="badge">@particpant.Type</span>
-                                    <h4 class="list-group-item-heading">@particpant.Person.FullName</h4>
-
-                                    @if (!string.IsNullOrEmpty(particpant.Person.Description))
+                                <div class="col-sm-4">
+                                    <h4 class="media-heading">@participant.Person.FullName</h4>
+                                    @if (!string.IsNullOrEmpty(participant.Person.Description))
                                     {
-                                        <p>@particpant.Person.Description</p>
+                                        <p>@participant.Person.Description</p>
                                     }
 
                                     <p>
-                                        @if (!string.IsNullOrEmpty(particpant.Person.Email))
+                                        @if (!string.IsNullOrEmpty(participant.Person.Email))
                                         {
                                             <span class="glyphicon glyphicon-envelope"></span>
-                                            <a href="mailto:@particpant.Person.Email">@particpant.Person.Email</a>
+                                            <a href="mailto:@participant.Person.Email">@participant.Person.Email</a>
                                             <br />
                                         }
 
-                                        @if (!string.IsNullOrEmpty(particpant.Person.PhoneNumber))
+                                        @if (!string.IsNullOrEmpty(participant.Person.PhoneNumber))
                                         {
                                             <span class="glyphicon glyphicon-earphone"></span>
                                             if (Request.Browser.CanInitiateVoiceCall)
                                             {
-                                                <a href="tel:@particpant.Person.PhoneNumber">@particpant.Person.PhoneNumber</a>
+                                                <a href="tel:@participant.Person.PhoneNumber">@Formatter.PhoneNumber(participant.Person.PhoneNumber)</a>
                                             }
                                             else
                                             {
-                                                @particpant.Person.PhoneNumber
+                                                @Formatter.PhoneNumber(participant.Person.PhoneNumber)
                                             }
                                         }
                                     </p>
-                                </li>
+                                </div>
                             }
-                        </ul>
-                    }
-                </div>
+                        </div>
+                    </div>
+                }
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">Notes</div>
-                <div class="panel-body">
-                    @Model.ActivityLog.Notes
-                </div>
-            </div>
+        </div>
+    }
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Notes</h3>
+            <div style="white-space: pre-line">@Model.ActivityLog.Notes</div>
+            <br /><br />
         </div>
     </div>
 }
