--- a/src/Belletrix.Web/Views/ActivityLog/EditFieldsPartial.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/EditFieldsPartial.cshtml
@@ -127,7 +127,7 @@
                 <div class="row last-row">
                     <div class="col-lg-12">
                         <div class="form-group">
-                            <button type="button" id="addPersonButton" class="btn btn-default btn-sm pull-right" data-toggle="modal" data-target="#personModal">Add Person</button>
+                            <button type="button" id="addPersonButton" class="btn btn-default btn-sm pull-right">Add Person</button>
                         </div>
                     </div>
                 </div>
