--- a/src/Belletrix.Web/Views/ActivityLog/View.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/View.cshtml
@@ -12,22 +12,17 @@
 @section FooterScript {
     <script>
     $(function () {
-        'use strict';
+        var activityLog = new Belletrix.ActivityLog();
+        var activityLogDocument = new Belletrix.ActivityLogDocument('@Url.Action("DocumentList")',
+            '#document-list', @Model.ActivityLog.Id);
 
-        var document = new Belletrix.Document();
-        document.initActivityLog('@Url.Action("AddDocument")', @Model.ActivityLog.Id, '#add-document');
-@*
-        var activityLog = new Belletrix.ActivityLog(
-            '@Url.Action("AddPerson", "ActivityLogPerson", new { guid = sessionId })',
-            '@Url.Action("AddPersonId", "ActivityLogPerson")',
-            '@Url.Action("RemovePersonId", "ActivityLogPerson")',
-            '@sessionId');
+        activityLog.initView('@Url.Action("AddDocument")', @Model.ActivityLog.Id, '#add-document',
+            activityLogDocument);
 
-        activityLog.initSession(
-            '@Url.Action("StartSession", "ActivityLogPerson", new { guid = sessionId })');
-
-        activityLog.initTitleCheck('#Title', '#unique-name', '@Url.Action("TitleCheck")');
-*@
+        @if (Model.HasDocuments)
+        {
+            <text>activityLogDocument.refreshList();</text>
+        }
     });
     </script>
 }
@@ -77,7 +72,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-6">
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-unstyled list-inline">
@@ -119,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <h4>
                 Documents
                 <label class="btn btn-success btn-xs pull-right">
@@ -128,15 +123,7 @@
                 </label>
             </h4>
 
-            @if (Model.Documents != null && Model.Documents.Any())
-            {
-                <div class="list-group">
-                    @foreach (DocumentViewModel document in Model.Documents)
-                    {
-                        <a href="#" class="list-group-item">@document.Title</a>
-                    }
-                </div>
-            }
+            <div id="document-list"></div>
         </div>
     </div>
     @if (Model.Participants != null && Model.Participants.Any())
