Add spinner to document list block populated via ajax request

--- a/src/Belletrix.Web/Views/Student/Edit.cshtml
+++ b/src/Belletrix.Web/Views/Student/Edit.cshtml
@@ -380,7 +380,7 @@
         </div>
 
         <div class="tab-pane" id="studyabroadtab">
-            <div class="text-center"><i class="glyphicon glyphicon-refresh" style="display: inline-block;"></i></div>
+            <div class="text-center"><i class="glyphicon glyphicon-refresh spinning" style="display: inline-block;"></i></div>
         </div>
     </div>
 }
