--- a/src/Belletrix.Web/Views/ActivityLog/View.cshtml
+++ b/src/Belletrix.Web/Views/ActivityLog/View.cshtml
@@ -123,7 +123,15 @@
                 </label>
             </h4>
 
-            <div id="document-list"></div>
+            <div id="document-list">
+                @if (Model.HasDocuments)
+                {
+                    <div class="text-center text-muted">
+                        <span class="glyphicon glyphicon-refresh spinning text-center"></span>
+                        <em>Loading&hellip;</em>
+                    </div>
+                }
+            </div>
         </div>
     </div>
     @if (Model.Participants != null && Model.Participants.Any())
