Move analytics to same domain

--- a/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
+++ b/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
@@ -49,12 +49,12 @@
         }
 
         (function () {
-            var u="//analytics.andreinicholson.com/";
+            var u="//analytics.belletrix.org/";
             _paq.push(['setTrackerUrl', u+'piwik.php']);
             _paq.push(['setSiteId', '17']);
             var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
             g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
         })();
     </script>
-    <noscript><p><img src="//analytics.andreinicholson.com/piwik.php?idsite=17" style="border:0;" alt="" /></p></noscript>
+    <noscript><p><img src="//analytics.belletrix.org/piwik.php?idsite=17" style="border:0;" alt="" /></p></noscript>
 }
