Move to User ID to track users across devices
https://piwik.org/docs/user-id/

--- a/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
+++ b/src/Belletrix.Web/App_Code/GeneralLayout.cshtml
@@ -45,7 +45,7 @@
 
         @if (!string.IsNullOrEmpty(username))
         {
-            <text>_paq.push(['setCustomVariable', '1', 'username', '@username']);</text>
+            <text>_paq.push(['setUserId', '@username']);</text>
         }
 
         (function () {
